# TradingInfraDemo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
Backtesting/: BacktestingEngine.py
Examples/: Demo1.html  Demo1.ipynb  StratNaiveLSMom.py
MarketDataLoader/: Kline.py  OfflineDataADAUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataAVAXUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataBNBUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataBTCUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataDOGEUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataDOTUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataETHUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataLINKUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataLTCUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataSOLUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataTRXUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataUNIUSDT_4h_2024-12-31 00:00:00.csv  OfflineDataXRPUSDT_4h_2024-12-31 00:00:00.csv  mom_scores.csv
Models/: ModelTraining.py  __init__.py
tests/: test_BacktestingEngine.py  test_ModelTraining.py
