[project]
name = "trading-infra-demo"
version = "0.1.0"
description = "A toy example from proprietary trading infrastructure"
authors = [
    { name = "Haoqing Wu", email = "wuhaoqing28@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-binance==1.0.29",
    "catboost==1.2.8",
    "matplotlib==3.10.0",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "polars==1.30.0",
    "plotly==6.0.0",
    "scikit-learn==1.6.1",
    "statsmodels==0.14.4",
    "tqdm==4.66.4",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Backtesting", "MarketDataLoader"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]